COH-25213 Run tests using module path (part 1) (merge main -> ce/main 92067) RQ job.9.20220427111122.26858
[git-p4: depot-paths = "//dev/coherence-ce/main/": change = 92070]