@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  Copyright (c) 2000, 2022, Oracle and/or its affiliates.
-
-  Licensed under the Universal Permissive License v 1.0 as shown at
-  http://oss.oracle.com/licenses/upl.
--->
+  ~ Copyright (c) 2000, 2022, Oracle and/or its affiliates.
+  ~
+  ~ Licensed under the Universal Permissive License v 1.0 as shown at
+  ~ https://oss.oracle.com/licenses/upl.
+  -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
@@ -135,8 +135,8 @@
     <skip-sign-artifacts>true</skip-sign-artifacts>
     <skip-code-coverage>true</skip-code-coverage>
 
-    <surefire.argLine>-Xmx2g -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=${project.build.directory} -XX:+ExitOnOutOfMemoryError -Dfile.encoding=UTF-8 --illegal-access=permit</surefire.argLine>
-    <failsafe.argLine>-Xmx1g -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=${project.build.directory} -XX:+ExitOnOutOfMemoryError -Dfile.encoding=UTF-8 --illegal-access=permit</failsafe.argLine>
+    <surefire.argLine>-Xmx2g -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=${project.build.directory} -XX:+ExitOnOutOfMemoryError -Dfile.encoding=UTF-8</surefire.argLine>
+    <failsafe.argLine>-Xmx1g -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=${project.build.directory} -XX:+ExitOnOutOfMemoryError -Dfile.encoding=UTF-8</failsafe.argLine>
     <surefire.coverage.argline/>
     <failsafe.coverage.argline/>
 
@@ -840,6 +840,63 @@
         <module>docs</module>
       </modules>
     </profile>
+
+    <profile>
+      <id>modular-tests</id>
+      <properties>
+        <useModulePath>true</useModulePath>
+        <skipTests>true</skipTests>
+        <test.module.info>${top.parent.basedir}/coherence-testing-support/module-infos/basic-junit4/module-info.java</test.module.info>
+        <!-- This is a work-around due to FailSafe putting JUnit jars on both the classpath and module path -->
+        <failsafe.modules.argline>
+          --add-exports org.junit.platform.commons/org.junit.platform.commons=ALL-UNNAMED
+          --add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
+          --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
+        </failsafe.modules.argline>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>com.oracle.coherence.moditect</groupId>
+            <artifactId>moditect-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>add-module-info</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>add-module-info</goal>
+                </goals>
+                <configuration combine.self="override">
+                  <module>
+                    <moduleInfoFile>${test.module.info}</moduleInfoFile>
+                  </module>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>integration-test</goal>
+                  <goal>verify</goal>
+                </goals>
+                <configuration>
+                  <useModulePath>${useModulePath}</useModulePath>
+                  <systemProperties>
+                    <com.oracle.bedrock.modules.enabled>true</com.oracle.bedrock.modules.enabled>
+                  </systemProperties>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
 
     <profile>
       <id>security-manager</id>
